# ParaViewGadgetPlugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  paraview.plugin
src/Reader/: CMakeLists.txt  Gadget_Server.xml  TestSimpleGadgetReader.cxx  vtk.module  vtkGadgetReader.cxx  vtkGadgetReader.h
src/Testing/Cxx/: CMakeLists.txt  TestSimpleGadgetReader.cxx  TestSimpleReader.cxx
